cli/tests/snapshot/inputs/errors/typecheck_strict_mode.ncl
# capture = 'stderr'
# command = ['typecheck', '--strict-typechecking']
1 + "foo"
